src/test/deca/context/invalid/modulo_using_float.deca
// Description:
//    Calcul de modulo avec float
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : You cant divide things that are not int
//
// Historique:
//    cree le 07/01/2025

{   
    float f = 3.0 % 4 ;
}